# gtestcmake

./: CMakeLists.txt  README.md  runme.bat
Templates/Project/UsingPrecompiledHeaders/: main.cpp  stdafx.cpp
Templates/UnitTests/NotUsingPrecompiledHeaders/: main.cpp  main_UnitTests.cpp
Templates/UnitTests/UsingPrecompiledHeaders/: main.cpp  main_UnitTests.cpp  stdafx.h
